--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,8 +2,36 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_favorite"
+        android:orderInCategory="90"
+        android:title="@string/action_chosen"
+        android:icon="@drawable/ic_favorite_24dp"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_search"
+        android:orderInCategory="95"
+        android:title="@string/action_search"
+        android:icon="@drawable/ic_search_24dp"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_share"
+        android:orderInCategory="110"
+        android:title="@string/action_share"
+        android:icon="@drawable/ic_menu_share"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_mark"
+        android:orderInCategory="120"
+        android:title="@string/action_mark"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_exit"
+        android:orderInCategory="130"
+        android:title="@string/action_exit"
         app:showAsAction="never" />
 </menu>
